add new box gif

--- a/map.html
+++ b/map.html
@@ -41,7 +41,7 @@ test
             var boxMarkers = locations.map(function (location, i) {
                 var marker = new google.maps.Marker({
                     position: location,
-                    icon: './box.png'
+                    icon: './box.gif'
                 });
 
                 google.maps.event.addListener(marker, 'click', function (evt) {
