--- a/CSS/test.html
+++ b/CSS/test.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+	<style>
+		img {
+			filter: blur(1px);
+			filter: brightness(70%);
+			filter: contrast(200%);
+			filter: drop-shadow(705px 0 0 rgb(126, 7, 223));
+		}
+	</style>
 </head>
 <body>
+	<div>
+		<img src="test.jpg">
+	</div>
 	
 </body>
 </html>
