--- a/CSS/test.html
+++ b/CSS/test.html
@@ -5,8 +5,14 @@
 		img {
 			filter: blur(1px);
 			filter: brightness(70%);
-			filter: contrast(200%);
-			filter: drop-shadow(705px 0 0 rgb(126, 7, 223));
+			
+			filter: contrast(1000%);
+			filter: drop-shadow(705px 0 0 rgb(126, 7, 223));/*??*/
+			/*Change color 0 - 360*/
+			filter: hue-rotate(330deg); 
+			filter: invert(100%);
+			filter: grayscale(100%);
+			filter: sepia(100%)
 		}
 	</style>
 </head>
