--- a/JavaScript/debounce/index.html
+++ b/JavaScript/debounce/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <div id="container"></div>
+    <button id="button">Cancel Debounce</button>
     <script src="debounce.js"></script>
 </body>
 
